--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@swimlane/ngx-datatable": "^17.0.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ngb-modal": "^2.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
